# delitant

./: README.md  app.py  auth.py  config.py  dltant.py  input_file.py  main.py  passenger_wsgi.py  pyproject.toml
download_files/: file_bdd.BDD  file_vtd.VTD
instance/: db.sqlite
migrations/versions/: 7f47a5bc161d_create_users_table.py
models/: __init__.py  user.py
static/: index.html
static/css/: style.css
templates/: base.html  download.html  index.html  login.html  signup.html
upload_files/: prime6.xlsx
